overflow fix

--- a/thinclab_outcool/src/screens/Dashboard.css
+++ b/thinclab_outcool/src/screens/Dashboard.css
@@ -27,4 +27,5 @@
   margin: 0;
   padding: 0;
   width: 35%;
+  overflow: hidden;
 }
